--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rollup": "^2.79.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-esbuild": "^4.10.1",
+    "rollup-plugin-typescript-paths": "^1.4.0",
     "ts-jest": "^29.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
