--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@matteosacchetto/typescript-rollup-lib-template",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Template for creating a JS library using Typescript and Rollup for bundling it to CJS and ESM modules",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -19,21 +19,22 @@
     "@rollup/plugin-eslint": "^8.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.5.0",
-    "@types/jest": "^29.0.2",
-    "@types/node": "^18.7.18",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "esbuild": "^0.15.7",
-    "eslint": "^8.23.1",
+    "@types/jest": "^29.1.1",
+    "@types/node": "^18.8.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "esbuild": "^0.15.10",
+    "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "^29.0.3",
+    "jest": "^29.1.2",
     "prettier": "^2.7.1",
-    "rollup": "^2.79.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-esbuild": "^4.10.1",
-    "ts-jest": "^29.0.1",
+    "rollup-plugin-typescript-paths": "^1.4.0",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16.15",
