--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@matteosacchetto/typescript-rollup-lib-template",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Template for creating a JS library using Typescript and Rollup for bundling it to CJS and ESM modules",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "lint": "npx tsc --noemit && npx eslint src test",
     "prebuild": "rm -rf dist",
