--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "@matteosacchetto/typescript-rollup-lib-template",
   "version": "0.1.4",
   "description": "Template for creating a JS library using Typescript and Rollup for bundling it to CJS and ESM modules",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/esm/index.mjs",
+    "require": "./dist/cjs/index.cjs",
+    "types": "./dist/index.d.ts"
+  },
   "sideEffects": false,
   "scripts": {
     "lint": "npx tsc --noemit && npx eslint src test",
