--- a/package.json
+++ b/package.json
@@ -22,24 +22,25 @@
   "author": "Matteo Sacchetto",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-eslint": "^8.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-typescript": "^8.5.0",
-    "@types/jest": "^29.1.1",
-    "@types/node": "^18.8.2",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "esbuild": "^0.15.10",
-    "eslint": "^8.24.0",
+    "@rollup/plugin-eslint": "^9.0.1",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "esbuild": "^0.15.13",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "^29.1.2",
+    "jest": "^29.2.2",
     "prettier": "^2.7.1",
-    "rollup": "^2.79.1",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-esbuild": "^4.10.1",
+    "rollup": "^3.2.5",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^4.10.2",
+    "rollup-plugin-node-externals": "^5.0.2",
     "rollup-plugin-typescript-paths": "^1.4.0",
     "ts-jest": "^29.0.3",
-    "tslib": "^2.4.0",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   },
   "engines": {
